--- a/resume/resume.html
+++ b/resume/resume.html
@@ -10,20 +10,20 @@
   <body>
     <div id="container">
       <div class="left">
-        <h2>简历</h2>
+        <h2 class="title">简历</h2>
       </div>
       <div class="content">
-        <section>
-          <h3>基本信息</h3>
-          <p>
+        <section class="item-area">
+          <h3 class="item-title">基本信息</h3>
+          <p class="item-content">
             <span class="item-name">姓名</span>张三
             <span class="item-name">性别</span>男
             <span class="item-name">应聘职位</span>前端工程师
           </p>
         </section>
-        <section>
-          <h3>联系方式</h3>
-          <p>
+        <section class="item-area">
+          <h3 class="item-title">联系方式</h3>
+          <p class="item-content">
             <span class="item-name">手机</span>12341234123
             <span class="item-name">Email</span>
             <a href="mailto:joinefe@baidu.com">joinefe@baidu.com</a>
@@ -31,29 +31,32 @@
             <a href="https://github.com/baidu">Github</a>
           </p>
         </section>
-        <hr>
-        <section>
-          <h3>能力描述</h3>
-          <h4>技术能力</h4>
-          <p>熟练掌握HTML, CSS, JavaScript</p>
-          <h4>综合能力</h4>
-          <p>良好的沟通，主动积极，努力勤奋</p>
+        <section class="item-area">
+          <h3 class="item-title">能力描述</h3>
+          <div class="item-content">
+            <h4>技术能力</h4>
+            <p>熟练掌握HTML, CSS, JavaScript</p>
+            <h4>综合能力</h4>
+            <p>良好的沟通，主动积极，努力勤奋</p>
+          </div>
         </section>
-        <hr>
-        <section>
-          <h3>教育经历</h3>
-          <h4>本科</h4>
-          <p>百度前端技术学院小薇学院</p>
-          <h4>研究生</h4>
-          <p>百度前端技术学院大斌学院</p>
+        <section class="item-area">
+          <h3 class="item-title">教育经历</h3>
+          <div class="item-content">
+            <h4>本科</h4>
+            <p>百度前端技术学院小薇学院</p>
+            <h4>研究生</h4>
+            <p>百度前端技术学院大斌学院</p>
+          </div>
         </section>
-        <hr>
-        <section>
-          <h3>项目经历</h3>
-          <h4>小度小度</h4>
-          <p>作为前端工程师角色参与了ABC组件的开发</p>
-          <h4>SAN Doc</h4>
-          <p>作为文档工程师参与了SAN Doc编写</p>
+        <section class="item-area">
+          <h3 class="item-title">项目经历</h3>
+          <div class="item-content">
+            <h4>小度小度</h4>
+            <p>作为前端工程师角色参与了ABC组件的开发</p>
+            <h4>SAN Doc</h4>
+            <p>作为文档工程师参与了SAN Doc编写</p>
+          </div>
         </section>
       </div>
     </div>
