--- a/resume/resume.html
+++ b/resume/resume.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>IFE</title>
-    <link rel="stylesheet" href="css/style_3.css" />
+    <link rel="stylesheet" type="text/css" href="css/style_3.css" />
   </head>
 
   <body>
