--- a/spa/spa.html
+++ b/spa/spa.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- 主导航区域 -->
     <nav id="nav-primary">
         <label>
             <input class="nav-input" type="radio" name="nav-primary" value="message" checked/>
@@ -38,6 +39,125 @@
         </a>
     </nav>
 
+    <!-- 二级导航 -->
+    <nav id="nav-secondary">
+        <!-- section 1 -->
+        <div class="nav-group">
+            <a>menu</a>
+            <div class="nav-group-wrapper">
+                <img src="images/setting.png">
+            </div>
+        </div>
+        <div class="nav-item">
+            <a>Overview</a>
+            <div class="nav-item-wrapper">
+                <span class="nav-item-num">12</span>
+            </div>
+        </div>
+        <div class="nav-item">
+            <a>Sales</a>
+            <div class="nav-item-wrapper">
+                <span class="nav-item-num nav-item-num-active">12</span>
+            </div>
+        </div>
+        <div class="nav-item">
+            <a>Staff</a>
+            <div class="nav-item-wrapper">
+                <span class="nav-item-num">12</span>
+            </div>
+        </div>
+        <div class="nav-item">
+            <a>Analytics &amp; Targeting</a>
+            <div class="nav-item-wrapper">
+                <span class="nav-item-num">12</span>
+            </div>
+        </div>
+        <hr>
+
+        <!-- section 2 -->
+        <section>
+            <div class="nav-group">
+                <a>your products</a>
+                <div class="nav-group-wrapper">
+                    <img src="images/setting.png">
+                </div>
+            </div>
+            <div class="nav-item nav-item-with-img">
+                <div class="nav-item-wrapper-img">
+                    <img src="images/book.png">
+                </div>
+                <a>Books</a>
+            </div>
+            <div class="nav-item nav-item-with-img">
+                <div class="nav-item-wrapper-img">
+                    <img src="images/camera.png">
+                </div>
+                <a>Tutorials</a>
+            </div>
+            <div class="nav-item nav-item-with-img">
+                <div class="nav-item-wrapper-img">
+                    <img src="images/painting.png">
+                </div>
+                <a>Stocks</a>
+            </div>
+            <div class="nav-item nav-item-with-img">
+                <div class="nav-item-wrapper-img">
+                    <img src="images/chart.png">
+                </div>
+                <a>Infographics</a>
+            </div>
+        </section>
+        <hr>
+        <!-- section 3 -->
+        <section id="nav-dashboard">
+            <div class="nav-group">
+                <a>dashboard</a>
+                <div class="nav-group-wrapper">
+                    <img src="images/setting.png">
+                </div>
+            </div>
+            <div class="nav-item">
+                <a>Messages</a>
+                <div class="nav-item-wrapper">
+                    <span class="nav-item-num nav-item-num-active">21</span>
+                </div>
+            </div>
+            <div class="nav-item">
+                <a>Connections</a>
+                <div class="nav-item-wrapper">
+                    <span class="nav-item-num">12</span>
+                </div>
+            </div>
+            <div class="nav-item">
+                <a>Integrations</a>
+                <div class="nav-item-wrapper">
+                    <span class="nav-item-num nav-item-num-warning">!</span>
+                </div>
+            </div>
+            <div class="nav-item">
+                <a>Account Settings</a>
+                <div class="nav-item-wrapper">
+                    <span class="nav-item-num">12</span>
+                </div>
+            </div>
+            <div class="nav-item">
+                <a>App Settings</a>
+                <div class="nav-item-wrapper">
+                    <span class="nav-item-num">12</span>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- 底部进度 -->
+        <section id="nav-goals">
+            <p>Monthly Goals&nbsp;&nbsp;&nbsp;&nbsp;
+                <strong>$580</strong>/$3200</p>
+            <div id="nav-progress-bar">
+                <span id="nav-progress"></span>
+            </div>
+        </section>
+    </nav>
 </body>
 
 </html>
