聊天栏完成

--- a/spa/spa.html
+++ b/spa/spa.html
@@ -51,25 +51,25 @@
         <div class="nav-item">
             <a>Overview</a>
             <div class="nav-item-wrapper">
-                <span class="nav-item-num">12</span>
+                <span class="nav-item-notification">12</span>
             </div>
         </div>
         <div class="nav-item">
             <a>Sales</a>
             <div class="nav-item-wrapper">
-                <span class="nav-item-num nav-item-num-active">12</span>
+                <span class="nav-item-notification nav-item-notification-active">12</span>
             </div>
         </div>
         <div class="nav-item">
             <a>Staff</a>
             <div class="nav-item-wrapper">
-                <span class="nav-item-num">12</span>
+                <span class="nav-item-notification">12</span>
             </div>
         </div>
         <div class="nav-item">
             <a>Analytics &amp; Targeting</a>
             <div class="nav-item-wrapper">
-                <span class="nav-item-num">12</span>
+                <span class="nav-item-notification">12</span>
             </div>
         </div>
         <hr>
@@ -119,31 +119,31 @@
             <div class="nav-item">
                 <a>Messages</a>
                 <div class="nav-item-wrapper">
-                    <span class="nav-item-num nav-item-num-active">21</span>
+                    <span class="nav-item-notification nav-item-notification-active">21</span>
                 </div>
             </div>
             <div class="nav-item">
                 <a>Connections</a>
                 <div class="nav-item-wrapper">
-                    <span class="nav-item-num">12</span>
+                    <span class="nav-item-notification">12</span>
                 </div>
             </div>
             <div class="nav-item">
                 <a>Integrations</a>
                 <div class="nav-item-wrapper">
-                    <span class="nav-item-num nav-item-num-warning">!</span>
+                    <span class="nav-item-notification nav-item-notification-warning">!</span>
                 </div>
             </div>
             <div class="nav-item">
                 <a>Account Settings</a>
                 <div class="nav-item-wrapper">
-                    <span class="nav-item-num">12</span>
+                    <span class="nav-item-notification">12</span>
                 </div>
             </div>
             <div class="nav-item">
                 <a>App Settings</a>
                 <div class="nav-item-wrapper">
-                    <span class="nav-item-num">12</span>
+                    <span class="nav-item-notification">12</span>
                 </div>
             </div>
 
@@ -158,6 +158,163 @@
             </div>
         </section>
     </nav>
+
+    <!-- 右侧白色区域 -->
+    <section id="container-messages">
+        <!-- Topbar -->
+        <section id="topbar">
+            <p id="topbar-title">Messages</p>
+            <div id="topbar-self">
+                <div id="topbar-self-face-container">
+                    <img src="images/face_00.png" id="topbar-self-face">
+                    <img src="images/status.png" id="topbar-self-status">
+                </div>
+                <div id="topbar-self-text">
+                    <p id="topbar-self-name">Jordan J.</p>
+                    <p id="topbar-self-role">Administrator</p>
+                </div>
+                <div id="topbar-self-dropdown">
+                    <img src="images/dropdown.png">
+                </div>
+            </div>
+        </section>
+
+        <section id="nav-chat">
+            <!-- 搜索框 -->
+            <div id="search-container">
+                <div id="search-bar">
+                    <!-- <span>Search</span> -->
+                    <input type="search" placeholder="Search">
+                    <img src="images/icon_search.png">
+                </div>
+            </div>
+
+            <!-- 聊天栏 -->
+            <section id="chat-items">
+                <label class="chat-item-container">
+                    <input class="chat-item-radio" type="radio" name="chatting" checked/>
+                    <div class="chat-item-head-container">
+                        <a href="">
+                            <img src="images/face_01.png" class="chat-item-avatar">
+                        </a>
+                        <div class="chat-item-name-container">
+                            <span class="chat-item-name-highlight"></span>
+                            <span class="chat-item-name">Bessie Berry</span>
+                            <span class="chat-item-body">Twitter</span>
+                        </div>
+                    </div>
+                    <p class="chat-item-content">I pay for the 4Mb/sec down, 512 Kb/sec up service from O2. In fact, it's relatively quick, and stable...</p>
+                    <span class="chat-item-head-time">12m</span>
+                    <span class="chat-item-active"></span>
+                    <span class="chat-item-notification chat-item-notification-active">4</span>
+                </label>
+                <label class="chat-item-container">
+                    <input class="chat-item-radio" type="radio" name="chatting" />
+                    <div class="chat-item-head-container">
+                        <a href="">
+                            <img src="images/face_02.png" class="chat-item-avatar">
+                        </a>
+                        <div class="chat-item-name-container">
+                            <span class="chat-item-name-highlight"></span>
+                            <span class="chat-item-name">Victor Weber</span>
+                            <span class="chat-item-body">Adobe</span>
+                        </div>
+                    </div>
+                    <p class="chat-item-content">I shared this on my fb wall a few months back, and I thought I'd share it here again because it's such
+                        a great...</p>
+                    <span class="chat-item-head-time">8m</span>
+                    <span class="chat-item-active"></span>
+                    <span class="chat-item-notification">4</span>
+                </label>
+                <label class="chat-item-container">
+                    <input class="chat-item-radio" type="radio" name="chatting" />
+                    <div class="chat-item-head-container">
+                        <a href="">
+                            <img src="images/face_03.png" class="chat-item-avatar">
+                        </a>
+                        <div class="chat-item-name-container">
+                            <span class="chat-item-name-highlight"></span>
+                            <span class="chat-item-name">Dustin Benson</span>
+                            <span class="chat-item-body">Facebook</span>
+                        </div>
+                    </div>
+                    <p class="chat-item-content">If there is anyone who needs an invitation please ad yourself in the comments of this post!</p>
+                    <span class="chat-item-head-time">Yesterday</span>
+                    <span class="chat-item-active"></span>
+                    <span class="chat-item-notification">4</span>
+                </label>
+                <label class="chat-item-container">
+                    <input class="chat-item-radio" type="radio" name="chatting" />
+                    <div class="chat-item-head-container">
+                        <a href="">
+                            <img src="images/face_04.png" class="chat-item-avatar">
+                        </a>
+                        <div class="chat-item-name-container">
+                            <span class="chat-item-name-highlight"></span>
+                            <span class="chat-item-name">Jack Mason</span>
+                            <span class="chat-item-body">Yahoo</span>
+                        </div>
+                    </div>
+                    <p class="chat-item-content">BruteDc is a peer-topeer movie+tv series sharing and downloading platform which works on intranet inside...</p>
+                    <span class="chat-item-head-time">Yesterday</span>
+                    <span class="chat-item-active"></span>
+                    <span class="chat-item-notification">4</span>
+                </label>
+                <label class="chat-item-container">
+                    <input class="chat-item-radio" type="radio" name="chatting" />
+                    <div class="chat-item-head-container">
+                        <a href="">
+                            <img src="images/face_05.png" class="chat-item-avatar">
+                        </a>
+                        <div class="chat-item-name-container">
+                            <span class="chat-item-name-highlight"></span>
+                            <span class="chat-item-name">Stephen Shelton</span>
+                            <span class="chat-item-body">Snapchat</span>
+                        </div>
+                    </div>
+                    <p class="chat-item-content">Yes, p2p traffic is often filtered (QoSed). Although i do use BT on O2wires, and in good days dl speed...</p>
+                    <span class="chat-item-head-time">13 Jun</span>
+                    <span class="chat-item-active"></span>
+                    <span class="chat-item-notification">4</span>
+                </label>
+                <label class="chat-item-container">
+                    <input class="chat-item-radio" type="radio" name="chatting" />
+                    <div class="chat-item-head-container">
+                        <a href="">
+                            <img src="images/face_06.png" class="chat-item-avatar">
+                        </a>
+                        <div class="chat-item-name-container">
+                            <span class="chat-item-name-highlight"></span>
+                            <span class="chat-item-name">Sally Willis</span>
+                            <span class="chat-item-body">Twitter</span>
+                        </div>
+                    </div>
+                    <p class="chat-item-content">Yes, it's O2: 'internet extreme', which is no longer offered.</p>
+                    <span class="chat-item-head-time">12m</span>
+                    <span class="chat-item-active"></span>
+                    <span class="chat-item-notification">4</span>
+                </label>
+                <label class="chat-item-container">
+                    <input class="chat-item-radio" type="radio" name="chatting" />
+                    <div class="chat-item-head-container">
+                        <a href="">
+                            <img src="images/face_07.png" class="chat-item-avatar">
+                        </a>
+                        <div class="chat-item-name-container">
+                            <span class="chat-item-name-highlight"></span>
+                            <span class="chat-item-name">Robert Patton</span>
+                            <span class="chat-item-body">A Team</span>
+                        </div>
+                    </div>
+                    <p class="chat-item-content">I change my service from this 4Mb plan to their much cheaper 8Mb plan, my speed will dramatically decrease.</p>
+                    <span class="chat-item-head-time">9 June</span>
+                    <span class="chat-item-active"></span>
+                    <span class="chat-item-notification">4</span>
+                </label>
+
+            </section>
+        </section>
+    </section>
 </body>
 
 </html>
