--- a/spa/spa.html
+++ b/spa/spa.html
@@ -314,6 +314,111 @@
 
             </section>
         </section>
+        <section id="conversation-container">
+            <header id="conversation-header">
+                <h4 id="conversation-name">
+                    Bessie Berry
+                    <span id="conversation-status"></span>
+                </h4>
+                <div id="conversation-btns">
+                    <div class="conversation-btn" id="conversation-btn-user">
+                        <img src="images/user.png">
+                    </div>
+                    <div class="conversation-btn" id="conversation-btn-upload">
+                        <img src="images/upload.png">
+                    </div>
+                    <div class="conversation-btn" id="conversation-btn-trash">
+                        <img src="images/trash.png">
+                    </div>
+                </div>
+                <p id="conversation-page">1 of 28</p>
+                <div class="conversation-btns">
+                    <div class="conversation-btn" id="conversation-btn-page-left">
+                        <img src="images/arrow_left.png">
+                    </div>
+                    <div class="conversation-btn" id="conversation-btn-page-right">
+                        <img src="images/arrow_right.png">
+                    </div>
+                </div>
+            </header>
+            <div class="conversation-body">
+                <div class="conversation-item">
+                    <img src="images/face_01.png" class="conversation-item-avatar">
+                    <p class="conversation-item-name">Bessie Berry
+                        <time class="message-time">8:31 AM</time>
+                    </p>
+                    <p class="conversation-item-content">Hi guys Ive got the O2 package and have really slow internet. A speed check online said i can get 3mbps
+                        but it seems more like 0.5 these days, just freezing and taking ages to open pages and open audio
+                        files for example. I have decided to switch to the UPC package which offers 10mbps but do you think
+                        i will get it?</p>
+                </div>
+                <div class="conversation-item">
+                    <img src="images/face_04.png" class="conversation-item-avatar">
+                    <p class="conversation-item-name">Jordan Jackson
+                        <time class="message-time">8:31 AM</time>
+                    </p>
+                    <p class="conversation-item-content">I have internet for 9 month and nevere could benefit from the full capacity of 5Mbit/s as it is filtered
+                        by O2 when it detect traffic on public p2p sharing in my situation all my internet speed slows to
+                        512Kbit/s. I never had 400KB/s on when downloading from p2p public servers like torrent emule etc.
+                        I downoad with 500KB/s from private trakers instead. So conlcusion O2 block trafic on p2p connections.
+                        I have made hundreds of test in Italy and Sweden and Romania with the same file to doanload with
+                        the same setting and same antivirus and just needed to open ports in firewall and forward same ports
+                        and the speed was at full capacity in 1 minute. here in 9 month never had this luck.</p>
+                </div>
+                <div class="conversation-divider">
+                    <hr>
+                    <span>Thursday</span>
+                </div>
+                <div class="conversation-item">
+                    <img src="images/face_01.png" class="conversation-item-avatar">
+                    <p class="conversation-item-name">Bessie Berry
+                        <time class="message-time">8:31 AM</time>
+                    </p>
+                    <p class="conversation-item-content">Funny comparison. so would the proper antivirus not slow down the internet as much or do you mean a freebie
+                        doenst protect the computer from viruses?</p>
+                </div>
+                <div class="conversation-item">
+                    <img src="images/face_04.png" class="conversation-item-avatar">
+                    <p class="conversation-item-name">Jordan Jackson
+                        <time class="message-time">8:31 AM</time>
+                    </p>
+                    <p class="conversation-item-content">I pay for the 4Mb/sec down, 512 Kb/sec up service from O2, and haven't had any problems. In fact, it's
+                        relatively quick, and stable. It's not perfect, but I really don't have issues, as long as I keep
+                        track of what I'm doing on it. I max out at about 3 Mb/sec down, and 350 Kb/sec up. Probably because
+                        of a noisy telephone line, not because I'm being throttled. When my uploads go over 25 KB/sec (note,
+                        bytes, not bits), my download speed suffers. This is expected, as downloads require upload bandwidth
+                        as well. </p>
+                    <div class="conversation-item-pic-container">
+                        <div class="conversation-item-pic-item">
+                            <img class="conversation-item-pic" src="images/pic_00.png">
+                            <img class="conversation-item-pic-cover" src="images/pic_zoom.png">
+                        </div>
+                        <div class="conversation-item-pic-item">
+                            <img class="conversation-item-pic" src="images/pic_01.png">
+                            <img class="conversation-item-pic-cover" src="images/pic_zoom.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="conversation-divider conversation-divider-highlight">
+                    <hr>
+                    <span>New Messages</span>
+                </div>
+                <div class="conversation-item">
+                    <img src="images/face_01.png" class="conversation-item-avatar">
+                    <p class="conversation-item-name">Bessie Berry
+                        <time class="message-time">8:31 AM</time>
+                    </p>
+                    <p class="conversation-item-content">I pay for the 4Mb/sec down, 512 Kb/sec up service from O2. In fact, it's relatively quick, and stable.
+                        It's not perfect, but I really don't have issues, as long as I keep track of what I'm doing on it.</p>
+                </div>
+                <div class="conversation-input-container">
+                    <div id="conversation-input-btn">
+                        <img src="images/chat_add.png">
+                    </div>
+<input id="conversation-input" type="text" value="Well, kinda both :) but more of that second option, i`ve seen many systems infected and crawling with">
+                </div>
+            </div>
+        </section>
     </section>
 </body>
 
